--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="">
+<html lang="en" data-theme="forest">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/main.css" />
+    <link rel="stylesheet" href="/src/app.css" />
     <title>33</title>
   </head>
   <body>
