feat: add Buy Me a Coffee button to support the project

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/app.css" />
     <title>THIRTYTHR33</title>
+    <a href="https://www.buymeacoffee.com/zackhanley"
+      ><img
+        src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=zackhanley&button_colour=40DCA5&font_colour=ffffff&font_family=Inter&outline_colour=000000&coffee_colour=FFDD00"
+    /></a>
   </head>
   <body>
     <div id="app"></div>
